theme/src/client/styles/md-enhance.scss
/* ... */
/* ------------------ Markdown Enhance: Code Tabs ----------------------- */
.plume-content {
  .code-tabs-nav {
    margin-bottom: 0;
  }

  .vp-code-tabs-nav {
    padding: 0 12px;
    margin: 0.85rem 0 0;
    background-color: var(--vp-code-tab-bg);
    box-shadow: inset 0 -1px var(--vp-code-tab-divider);
    transition: background-color var(--t-color), box-shadow var(--t-color);
  }

  .vp-code-tab-nav {
    position: relative;
    padding: 0 12px;
    font-size: 14px;
    font-weight: 500;
    line-height: 48px;
    color: var(--vp-code-tab-text-color);
    white-space: nowrap;
    border-bottom: 1px solid transparent;
    transition: color var(--t-color);
  }

  .vp-code-tab-nav::before {
    display: none;
  }

  .vp-code-tab-nav::after {
    position: absolute;
    right: 8px;
    bottom: -1px;
    left: 8px;
    z-index: 1;
    display: block;
    width: auto;
    height: 2px;
    content: "";
    background: transparent;
    border-radius: 2px;
    transition: background var(--t-color);
  }

  .vp-code-tab-nav.active {
    color: var(--vp-code-tab-active-text-color);
    background: transparent;
  }

  .vp-code-tab-nav.active::after {
    background: var(--vp-code-tab-active-bar-color);
  }

  .vp-code-tab-nav:hover {
    background: transparent;
  }

  @media (max-width: 419px) {
    .vp-code-tabs-nav {
      margin: 0 -1.5rem -0.85rem;
    }

    .hint-container .vp-code-tabs-nav {
      margin: 0.85rem -0.75rem 0 -1rem;
    }
  }
}

/* --------------------  Markdown Enhance: Code Demo  -------------------- */
.plume-content {
  .vp-code-demo {
    overflow: hidden;
    border: solid 1px var(--vp-c-divider);
    transition: border var(--t-color);

    @media (max-width: 419px) {
      .vp-code-demo-codes div[class*="language-"] {
        margin: 0;
        border-radius: 0;
      }
    }

    &:hover {
      box-shadow: none;
    }

    .vp-code-demo-header {
      padding: 8px 12px;
      transition: background-color var(--t-color);
    }

    .vp-code-demo-code-wrapper {
      margin-bottom: -0.9rem;
    }

    .vp-code-demo-toggle-button {
      margin: 0 12px 0 8px;
      background-color: var(--vp-c-gray-2);
      transition: background-color var(--t-color);

      &:hover {
        background-color: var(--vp-c-gray-1);
      }
    }

    .vp-code-demo-title {
      font-size: 1rem;
      line-height: 1.75;
    }

    .vp-code-demo-display {
      border-bottom: transparent;
    }

    .code-demo-jsfiddle .jsfiddle-button,
    .code-demo-codepen .codepen-button {
      background-color: transparent;
    }

    .vp-code-demo-codes div[class*="language-"] {
      border-bottom: 2px dashed var(--vp-c-divider);
      transition: border-bottom var(--t-color);

      &:first-of-type {
        border-top: 1px solid var(--vp-c-divider);
      }

      &:last-of-type {
        border-bottom: none;
      }
    }

    .vp-code-demo-codes div[class*="language-"] pre {
      margin-bottom: 0;
      border-radius: 0;
    }
  }

  @media (max-width: 419px) {
    .vp-code-demo {
      margin: 8px -12px;
    }
  }
}

/* --------------------  Markdown Enhance: markdown Demo  -------------------- */
.plume-content {
  .vp-md-demo {
    margin-bottom: 16px;
    overflow: hidden;
    border: solid 1px var(--vp-c-divider);
    transition: border var(--t-color);

    @media (max-width: 419px) {
      .vp-md-demo-codes div[class*="language-"] {
        margin: 0;
        border-radius: 0;
      }
    }

    &:hover {
      box-shadow: none;
    }

    .vp-md-demo-header {
      padding: 8px 12px;
      font-size: 16px;
      line-height: 1.7;
      transition: background-color var(--t-color);
    }

    .vp-md-demo-toggle-button {
      margin: 0 12px 0 8px;
      background-color: var(--vp-c-gray-2);
      transition: background-color var(--t-color);

      &:hover {
        background-color: var(--vp-c-gray-1);
      }
    }

    .vp-md-demo-title {
      font-size: 1rem;
      line-height: 1.75;
    }

    .vp-md-demo-display {
      border-bottom: transparent;
    }

    .vp-md-demo-codes div[class*="language-"] {
      border-bottom: 2px dashed var(--vp-c-divider);
      transition: border-bottom var(--t-color);

      &:first-of-type {
        border-top: 1px solid var(--vp-c-divider);
      }

      &:last-of-type {
        border-bottom: none;
      }
    }

    .vp-md-demo-codes div[class*="language-"] pre {
      margin-bottom: 0;
      border-radius: 0;
    }
  }

  @media (max-width: 419px) {
    .vp-md-demo {
      margin: 8px -12px;
    }
  }
}
/* ... */

